@@ -1,12 +1,12 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.202.2.26 2009/08/28 20:12:39 sfeam Exp $
+dnl $Id: configure.in,v 1.202.2.27 2009/08/29 17:51:19 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
 dnl remove the letter from VERSION
-AC_INIT(gnuplot, 4.2.5)
+AC_INIT(gnuplot, 4.2.6)
 AC_CONFIG_SRCDIR(src/graphics.c)
 AC_PREREQ(2.58)
 AM_CONFIG_HEADER(config.h:config.hin)
@@ -1119,9 +1119,9 @@ if test "$no_x" != yes; then
     AC_MSG_RESULT([    (without multi-byte fonts, requires support in libX11)])
   fi
   if test "$enable_binary_x11_polygon" = yes; then
-    AC_MSG_RESULT([    (with binary polygon protocol (EXPERIMENTAL))])
+    AC_MSG_RESULT([    (with binary polygon protocol)])
   else
-    AC_MSG_RESULT([    (without binary polygon protocol (EXPERIMENTAL))])
+    AC_MSG_RESULT([    (without binary polygon protocol)])
   fi
 else
     AC_MSG_RESULT([  X Window System terminal: no (requires X libraries)])
