@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.19.2.6 2009/03/15 03:39:15 sfeam Exp $
+% $Id: titlepag.tex,v 1.19.2.7 2009/08/29 17:51:20 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -155,7 +155,7 @@
 
   \vspace{2ex}
 
- 15 March 2009
+ 1 September 2009
 
    \end{center}
 \newpage
