@@ -1,3 +1,14 @@
+2009-08-29  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* configure.in: Remove the EXPERIMENTAL flag from the x11 terminal
+	binary polygon option.
+
+	* share/LaTeX/Makefile.am:  Comment out an uninstall command because
+	it breaks the build script.
+
+	* NEWS PATCHLEVEL configure.in docs/titlepag.tex src/version.c:
+	Update in preparation for release 4.2.6
+
 2009-08-28  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* configure.in: Remove the EXPERIMENTAL flag from the wxt terminal
